# h3xy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ReferenceManual_HexView.txt  hexkit_spec.md  plan.md  refactors.md
.cursor/: hooks.json
.github/workflows/: release.yml
ralph/: README.md  prompt.md  status.md
ralph/results/: latest_result.md
scripts/: batch-compare.sh  compare.sh  hexview_wrap.sh  ralph_loop.sh  run_validation.sh  validation_suite.sh
src/: cli.rs  error.rs  hexfile.rs  lib.rs  range.rs  segment.rs
src/io/: binary.rs  c_code.rs  error.rs  hex_ascii.rs  intel_hex.rs  mod.rs  srec.rs
src/ops/: checksum.rs  error.rs  filter.rs  flags.rs  log.rs  mod.rs  pipeline.rs  transform.rs
tests/: cli_checksum.rs  cli_e2e.rs  cli_in_memory.rs  cli_ops.rs  cli_ops_more.rs  cli_output.rs  cli_pipeline_parity.rs  cli_signature.rs  hexview_multistage.rs  hexview_ranges.rs  operations.rs  pipeline_parity.rs
tests/common/: mod.rs
tests/common_hex/: mod.rs
tests/common_lines/: mod.rs
validation/: README.md  main.py  pyproject.toml
validation/inputs/: alternating.hex  boot_app.hex  boundary_64k.hex  const_00.hex  flash_config.hex  max_addr.hex  misaligned.hex  multi_basic.hex  odd_length.hex  scattered.hex  sequential.hex  single_bytes.hex  single_large.hex  single_medium.hex  single_small.hex  test_single_small.hex  tiny.hex  words.hex
validation/src/h3xy_validation/: __init__.py  hexgen.py  intel_hex.py  runner.py  testgen.py
