[package]
name = "h3xy"
version = "0.1.0"
edition = "2024"
description = "Hex file processing library & CLI (HexView alternative/replacement)."
license = "MIT"
repository = "https://github.com/tomrford/h3xy"
categories = ["command-line-utilities"]
keywords = ["hex", "intel-hex", "srec", "firmware"]

[dependencies]
crc = "3.4.0"
thiserror = "2.0.17"
