[package]
name = "h3xy"
version = "1.0.0"
edition = "2024"
description = "Hex file processing library & CLI (HexView alternative/replacement)."
license = "MIT"
repository = "https://github.com/tomrford/h3xy"
categories = ["command-line-utilities"]
keywords = ["hex", "intel-hex", "srec", "firmware"]

[dependencies]
crc = "3.4.0"
ed25519-dalek = { version = "2.1.1", features = ["digest", "pem", "pkcs8"] }
md-5 = "0.10.6"
ripemd = "0.1.3"
rsa = { version = "0.9.8", features = ["getrandom", "sha2"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
x509-cert = "0.2.5"
