[project]
name = "h3xy-validation"
version = "0.1.0"
description = "Validation framework for h3xy vs HexView.exe comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
h3xy-validate = "h3xy_validation.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/h3xy_validation"]
